# forge-public

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_company.md  CLAUDE_reference.md  Dockerfile  INDEX.md  README.md  compose.deploy.yaml  compose.yaml  go.mod  pyproject.toml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: automation_workflows.md  current_priorities.md  project_overview.md
automation/: __init__.py
automation/compiled/: runtime.lock.json
automation/evals/: golden_cases.json
automation/pipeline/: __init__.py  app.py  cli.py  client_config.py  controller.py  doctor.py  documents.py  errors.py  explain.py  fetchers.py  initiators.py  knowledge_status.py  llm_client.py  models.py  operations.py  remote_client.py  repo_env.py  service_api.py  validators.py
automation/prompts/: critic.md  insight_writer.md  judge.md  knowledge_writer.md
automation/schemas/: patch.schema.json
automation/scripts/: extract-tags.sh  forge  generate-index.sh  quick-capture.sh  validate-provenance.sh
automation/templates/: insight.md  knowledge-article.md  raw-capture.md
cmd/forge/: main.go  main_test.go
docs/management/: 2026-04-04-unified-injection-baseline-handoff.md  CONTEXT.md  TODO.md  forge-command-contract.md  forge-howie-server-deployment.md  forge-llm-pipeline-v1.md  forge-operator-guide.md  repository-conventions.md  (+2 more)
tests/: test_cli.py  test_controller.py  test_docs_contract.py  test_doctor.py  test_llm_client.py  test_packaging.py  test_pipeline_app.py  test_repo_boundaries.py  test_service_api.py  test_validators.py
(+23 files in other folders)
